# compgeo

./: Cargo.toml  README.md
src/: algorithms.rs  app.rs  color.rs  main.rs  point.rs
src/algorithms/: mod.rs
src/algorithms/dewall/: algorithm.rs
src/algorithms/graham_scan/: algorithm.rs  helpers.rs  mod.rs
src/data/: cone.rs  dot.rs  mod.rs  point.rs  polar_direction.rs  pos2.rs  vec2.rs
src/data/point/: mod.rs  point2.rs  point3.rs
src/data/simplex/: line_segment.rs  mod.rs  point.rs  simplex.rs  tetrahedron.rs  triangle.rs
src/data/sphere/: mod.rs  sphere.rs  sphere1.rs  sphere2.rs
src/graham_scan/: algorithm.rs  cone.rs  direction.rs  helpers.rs  mod.rs
